--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Navbar.cshtml
@@ -67,7 +67,7 @@
 					<li>
 						<a href='@Url.Action("CheckUpdate", new { area = "Admin" })'>
 							<i class="fa fa-fw fa-level-up"></i>
-							<strong>Update available</strong>
+							<strong>@T("Admin.CheckUpdate.UpdateAvailable")</strong>
 							<span class="reddot" style="margin-left: 6px"></span>
 						</a>
 					</li>
