--- a/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
@@ -27,7 +27,7 @@
                            @T("DownloadableProducts.Fields.Order")
                         </th>
                         <th>
-                            @T("DownloadableProducts.Fields.Date")
+                            @T("Common.CreatedOn")
                         </th>
                         <th>
                             @T("DownloadableProducts.Fields.Product")
