--- a/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.Mobile.cshtml
@@ -147,7 +147,7 @@
                                 <div>@T("Order.ShipmentStatusEvents.Country"): @item.Country</div>
                                 @if (item.Date.HasValue)
                                 {
-                                    <div>@T("Order.ShipmentStatusEvents.Date"): @item.Date.Value.ToString("D")</div>
+                                    <div>@T("Common.Date"): @item.Date.Value.ToString("D")</div>
                                 }
                             </div>
                         </li>
