--- a/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/ShipmentDetails.cshtml
@@ -185,7 +185,7 @@
                                     @T("Order.ShipmentStatusEvents.Country")
                                 </th>
                                 <th class="a-center">
-                                    @T("Order.ShipmentStatusEvents.Date")
+                                    @T("Common.Date")
                                 </th>
                             </tr>
                         </thead>
