--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -366,9 +366,9 @@ td.adminData > input[type="checkbox"] {
 	border-bottom: 1px solid #ddd;
 }
 .admin-config-group .title {
-    font-size: 18px;
+    font-size: @fontSizeLarge;
 	margin: 12px 0;
-	padding: 12px 0;
+	padding: 8px 0;
 }
 .admin-config-group .small-title {
 	margin: 2px 0;
