--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/_CreateOrUpdate.cshtml
@@ -87,6 +87,15 @@
                 @Html.ValidationMessageFor(model => model.IsActive)
             </td>
         </tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SendManually)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.SendManually)
+				@Html.ValidationMessageFor(model => model.SendManually)
+			</td>
+		</tr>
     </table>
 	@(Html.LocalizedEditor<MessageTemplateModel, MessageTemplateLocalizedModel>("messagetemplate-localized",
     @<table class="adminContent">
